--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "eslint": "^8.56.0",
+    "link": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
