--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "eslint": "^8.56.0",
     "link": "^2.1.0",
     "react": "^18.2.0",
