--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^9.1.3",
     "router": "^1.3.8"
   },
   "devDependencies": {
